--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
     integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css" />
+  <script defer src="app/main.js"></script>
 </head>
 <header class="header">
   <h1><img src="imagens/Logo-1.png" /></h1>
@@ -29,7 +31,7 @@
       <li><button class="btn btn-ordenacao" href="#" id="btnOrdenarPorPreco">ORDENAR POR PREÇO</button></li>
     </ul>
   </nav>
-  <section class="livros wrap" id="livros">
+  <!-- <section class="livros wrap" id="livros">
     <div class="livro">
       <img class="livro__imagens" src="imagens/Cangaceiro-Javascript.png" alt="Capa do livro Cangaceiro JavaScript" />
       <h2 class="livro__titulo">
@@ -260,8 +262,8 @@
       <div class="tags">
         <span class="tag">Front-end</span>
         <span class="tag">Back-end</span>
-      </div>
-    </div>
+      </div> -->
+  </div>
 
   </section>
   <section id="valor_total_livros_disponiveis">
