--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       <li><button class="btn btn-ordenacao" href="#" id="btnOrdenarPorPreco">ORDENAR POR PREÇO</button></li>
     </ul>
   </nav>
-  <!-- <section class="livros wrap" id="livros">
+  <section class="livros wrap" id="livros">
+    <!--
     <div class="livro">
       <img class="livro__imagens" src="imagens/Cangaceiro-Javascript.png" alt="Capa do livro Cangaceiro JavaScript" />
       <h2 class="livro__titulo">
@@ -262,8 +263,8 @@
       <div class="tags">
         <span class="tag">Front-end</span>
         <span class="tag">Back-end</span>
-      </div> -->
-  </div>
+      </div>
+  </div> -->
 
   </section>
   <section id="valor_total_livros_disponiveis">
