--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css" />
   <script defer src="app/main.js"></script>
+  <script defer src="app/metodoForEach.js"></script>
+  <script defer src="app/metodoMap.js"></script>
+
 </head>
 <header class="header">
   <h1><img src="imagens/Logo-1.png" /></h1>
