--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script defer src="app/main.js"></script>
   <script defer src="app/metodoForEach.js"></script>
   <script defer src="app/metodoMap.js"></script>
+  <script defer src="app/metodoFilter.js"></script>
 
 </head>
 <header class="header">
