--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script defer src="app/metodoForEach.js"></script>
   <script defer src="app/metodoMap.js"></script>
   <script defer src="app/metodoFilter.js"></script>
+  <script defer src="app/metodoSort.js"></script>
 
 </head>
 <header class="header">
