--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script defer src="app/metodoMap.js"></script>
   <script defer src="app/metodoFilter.js"></script>
   <script defer src="app/metodoSort.js"></script>
+  <script defer src="app/metodoReduce.js"></script>
 
 </head>
 <header class="header">
